# jnv

./: Cargo.toml  README.md  dist-workspace.toml
src/: editor.rs  json.rs  main.rs  prompt.rs
src/config/: text_editor.rs
